--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django>=1.4
 MySQL-python>=1.2.3
 South>=0.7.5
-django-autocomplete-light>=1.0.24
-git+https://github.com/jenslauterbach/django-eve-igb.git
+git+https://github.com/nikdoof/django-eveigb
 pytz>=2012d
+eveapi>=1.2
