Implement celery for asyc tasks.
New Requirement: Celery
New Requirement: AMQP (RabbitMQ)
Implemented scheduled async tasks for updating system stats and sov.
Implemented scheduled async task for updating alliance and corp data.
Implemented async task for updating single corps and alliances.
Changed PvP icon.
Added core model for Faction used for sov updating.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,8 @@ South>=0.7.5
 git+https://github.com/marbindrakon/django-eveigb
 pytz>=2012d
 eveapi>=1.2
-django-infinite-memcached==0.1
-python-memcached==1.48
+django-infinite-memcached>=0.1
+python-memcached>=1.48
+celery>=3.0.12
+django-celery>=3.0.11
+amqplib>=1.0.2
