--- a/evewspace/evewspace/local_settings.py.example
+++ b/evewspace/evewspace/local_settings.py.example
@@ -1,5 +1,5 @@
 # Set this to False for production or you'll leak memory
-# DEBUG = not True
+#DEBUG = False
 DEBUG = True
 
 # Set this to a secret value, google "django secret key" will give you
@@ -16,12 +16,12 @@ STATIC_ROOT = "/home/evewspace/static/"
 
 DATABASES = {
         'default': {
-                'ENGINE': 'django.db.backends.postgresql_psycopg2', # Add 'postgresql_psycopg2', 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
-                'NAME': 'foo',                      # Or path to database file if using sqlite3.
-                'USER': 'postgres',                      # Not used with sqlite3.
-                'PASSWORD': 'foobar',                  # Not used with sqlite3.
-                'HOST': '127.0.0.1',                      # Set to empty string for localhost. Not used with sqlite3.
-                'PORT': '5432',                      # Set to empty string for default. Not used with sqlite3.
+                'ENGINE': 'django.db.backends.', # Add 'postgresql_psycopg2', 'postgresql', 'mysql', 'sqlite3' or 'oracle'.
+                'NAME': 'evewspace',                      # Or path to database file if using sqlite3.
+                'USER': 'root',                      # Not used with sqlite3.
+                'PASSWORD': '',                  # Not used with sqlite3.
+                'HOST': '',                      # Set to empty string for localhost. Not used with sqlite3.
+                'PORT': '',                      # Set to empty string for default. Not used with sqlite3.
         }
 }
 
