--- a/requirements-postgresql.txt
+++ b/requirements-postgresql.txt
@@ -1,23 +1,25 @@
-Django==1.6.1
-South==0.8.2
-amqp==1.0.13
+Django==1.6.8
+psycopg2==2.5.4
+PyTS3==0.3
+PyYAML==3.11
+South==1.0.1
+amqp==1.4.6
 amqplib==1.0.2
 anyjson==0.3.3
-billiard==2.7.3.34
-celery==3.0.24
-django-celery==3.0.23
+billiard==3.3.0.19
+celery==3.1.17
+decorator==3.4.0
+django-celery==3.1.16
 git+https://github.com/marbindrakon/django-eveigb
 django-infinite-memcached==0.1
 eveapi==1.2.6
 feedparser==5.1.3
-kombu==2.5.15
-python-dateutil==2.1
+kombu==3.0.24
+networkx==1.9.1
+python-dateutil==2.3
 python-memcached==1.53
-pytz>=2013.7
-sleekxmpp==1.1.11
+pytz==2014.10
+requests==2.5.0
+six==1.8.0
+sleekxmpp==1.3.1
 wsgiref==0.1.2
-networkx==1.8.1
-PyTS3==0.3
-requests==2.4.0
-psycopg2==2.5.4
-PyYAML==3.11
