Updated gitignore to ignore more environment and vagrant files.

--- a/.gitignore
+++ b/.gitignore
@@ -2,11 +2,15 @@
 *.pyc
 *.bak
 .vagrant
-celerybeat-schedule
+.idea
+.DS_Store
 bin
 lib
 include
-local_settings.py
-.DS_Store
+local
+build
+djcelery
+celerybeat-schedule
 doc/build/*
-.idea
+pip-selfcheck.json
+local_settings.py
