Add CREST characterLocationRead scope

--- a/evewspace/evewspace/local_settings.py.example
+++ b/evewspace/evewspace/local_settings.py.example
@@ -121,6 +121,6 @@ SSO_SECRET_KEY = 'x' #to be created at https://developers.eveonline.com/ for TQ
 SSO_CLIENT_ID = 'x' #to be created at https://developers.eveonline.com/ for TQ
 #callback URL is your base URL + /api/sso/login/
 SSO_BASE_URL = 'x' #do not forget the / at the end and https if the connection is secure
-#'esi-location.read_location.v1 esi-location.read_ship_type.v1' are needed for location and ship type information
+#'esi-location.read_location.v1 esi-location.read_ship_type.v1 characterLocationRead' are needed for location and ship type information
 SSO_SCOPE = 'esi-location.read_location.v1 esi-location.read_ship_type.v1' #scope of authorizations requested
 SSO_USER_AGENT = 'EVE W-space Instance' #Header
